--- a/01_04_b.ipynb
+++ b/01_04_b.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 01_04 - Building a basic Agent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,23 +28,8 @@
    "outputs": [],
    "source": [
     "## configuring the LLM\n",
-    "llm_config = {\"model\":\"gpt-4o\",\n",
-    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## if you want to use multiple LLMs, use config_list\n",
-    "config_list = [\n",
-    "   {\"model\": \"gpt-4o\", \"api_key\": os.getenv(\"OPENAI_API_KEY\")},\n",
-    "   {\"model\": \"llama3.1\", \"base_url\": \"http://localhost:11434\", \"tags\": [\"llama\", \"local\"]},\n",
-    "]\n",
-    "\n",
-    "llm_config = {'config_list':config_list}"
+    "llm_config = [{\"model\":\"gpt-4o\",\n",
+    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}]"
    ]
   }
  ],
