--- a/01_04_b.ipynb
+++ b/01_04_b.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01_04 - Building a basic Agent"
+    "# 01_04 - Building a basic Agent"
    ]
   },
   {
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "## configuring the LLM\n",
-    "llm_config = [{\"model\":\"gpt-4o\",\n",
-    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}]"
+    "llm_config = {\"model\":\"gpt-4o\",\n",
+    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}"
    ]
   }
  ],
