--- a/01_04_b.ipynb
+++ b/01_04_b.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "## configuring the LLM\n",
-    "llm_config = [{\"model\":\"gpt-4o\",\n",
-    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}]"
+    "llm_config = {\"model\":\"gpt-4o\",\n",
+    "               \"api_key\":os.getenv(\"OPENAI_API_KEY\")}"
    ]
   },
   {
