--- a/02_01_b.ipynb
+++ b/02_01_b.ipynb
@@ -41,7 +41,14 @@
    "id": "0fef42ac-58ae-4590-9c31-f11022250cbf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "config_list = [\n",
+    "            {\n",
+    "                \"model\": \"gpt-4o\",\n",
+    "                \"api_key\": os.getenv(\"OPENAI_API_KEY\")\n",
+    "            }\n",
+    "        ]"
+   ]
   }
  ],
  "metadata": {
