--- a/02_03_b.ipynb
+++ b/02_03_b.ipynb
@@ -5,7 +5,7 @@
    "id": "1ae76b94-830a-4c95-9d44-bec7ec0a5036",
    "metadata": {},
    "source": [
-    "# 02_02 - Research Assistant Design"
+    "# 02_03 - Creating agents for the Assistant"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "## import required libraries\n",
     "import os\n",
-    "from autogen import ConversableAgent\n",
+    "from autogen import ConversableAgent, UserProxyAgent\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
@@ -42,12 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_list = [\n",
-    "            {\n",
+    "## llm configuration\n",
+    "llm_config ={\n",
     "                \"model\": \"gpt-4o\",\n",
     "                \"api_key\": os.getenv(\"OPENAI_API_KEY\")\n",
-    "            }\n",
-    "        ]"
+    "            }"
    ]
   },
   {
