--- a/02_03_b.ipynb
+++ b/02_03_b.ipynb
@@ -5,7 +5,7 @@
    "id": "1ae76b94-830a-4c95-9d44-bec7ec0a5036",
    "metadata": {},
    "source": [
-    "# 02_02 - Research Assistant Design"
+    "# 02_03 - Creating agents for the Assistant"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "## import required libraries\n",
     "import os\n",
-    "from autogen import ConversableAgent\n",
+    "from autogen import ConversableAgent, UserProxyAgent\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
@@ -42,18 +42,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_list = [\n",
-    "            {\n",
+    "## llm configuration\n",
+    "llm_config ={\n",
     "                \"model\": \"gpt-4o\",\n",
     "                \"api_key\": os.getenv(\"OPENAI_API_KEY\")\n",
-    "            }\n",
-    "        ]"
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7783e7a0-65ef-4b79-9398-f049c23e0a87",
+   "metadata": {},
+   "source": [
+    "## Manager Proxy Agent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f90a0a-d1aa-4681-9f9a-17b3d227f19c",
+   "id": "9d22415f-9a8e-40de-910c-bd6af1d26ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8661421-9f43-472d-97e4-deb5421497e3",
+   "metadata": {},
+   "source": [
+    "## Idea Generator Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24647a18-4c1a-4ed1-8f02-3b9816351917",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ccaebe-5273-4535-b191-c39175e3bec6",
+   "metadata": {},
+   "source": [
+    "## Script Writer Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4aa0e6d-e205-435f-b668-e982b59408a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35069f7-ba60-4446-94ff-3a72eedd8ef3",
+   "metadata": {},
+   "source": [
+    "## Script Reviewer Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caca29e0-2e1c-4fe6-994d-1f78d615c3fa",
    "metadata": {},
    "outputs": [],
    "source": []
