update begin state

--- a/02_03_b.ipynb
+++ b/02_03_b.ipynb
@@ -50,9 +50,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94635c15-6d4a-4709-b497-9f4c44084ec0",
+   "metadata": {},
+   "source": [
+    "## Manager Proxy Agent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f90a0a-d1aa-4681-9f9a-17b3d227f19c",
+   "id": "8bfb376c-3f41-49d1-91d9-5f05e3a6012a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79100c29-9477-4f41-9c53-1b09c52ac494",
+   "metadata": {},
+   "source": [
+    "## Idea Generator Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d654a6f-c025-4eef-ae23-80896c0b5f35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85dc8bdd-994e-4312-966a-d332b992e1c9",
+   "metadata": {},
+   "source": [
+    "## Script Writer Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2748681b-8949-4327-a0a5-31ca497ef353",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7c346f3-903b-44eb-be6e-fdbd2b9d4a17",
+   "metadata": {},
+   "source": [
+    "## Script Reviewer Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f15e12bc-89b6-45f8-958b-19975f558ea9",
    "metadata": {},
    "outputs": [],
    "source": []
