--- a/02_03_e.ipynb
+++ b/02_03_e.ipynb
@@ -5,7 +5,7 @@
    "id": "1ae76b94-830a-4c95-9d44-bec7ec0a5036",
    "metadata": {},
    "source": [
-    "# 02_02 - Research Assistant Design"
+    "# 02_03 - Creating agents for the Assistant"
    ]
   },
   {
