update the code

--- a/02_04_e.ipynb
+++ b/02_04_e.ipynb
@@ -227,6 +227,50 @@
     "    },\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9c863e-2fa8-452c-8c85-eeae9a1b78fe",
+   "metadata": {},
+   "source": [
+    "## Start researching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f8f96be-3896-4fd9-95de-70fca3d8ff3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogen import initiate_chats\n",
+    "\n",
+    "chat_results = initiate_chats(chats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9040efa6-ab5e-4124-9623-a14929ffa68f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chat_result in chat_results:\n",
+    "    print(chat_result.summary)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b3d39a-9839-4ba5-ad77-bfb9879f92bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chat_result in chat_results:\n",
+    "    print(chat_result.cost)\n",
+    "    print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
