--- a/03_03_e.ipynb
+++ b/03_03_e.ipynb
@@ -179,8 +179,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca7906e3-cf13-4499-9e54-d6e40f711ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'autogen' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m SEO_reviewer \u001b[38;5;241m=\u001b[39m \u001b[43mautogen\u001b[49m\u001b[38;5;241m.\u001b[39mAssistantAgent(\n\u001b[1;32m      2\u001b[0m     name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSEO Reviewer\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m     llm_config\u001b[38;5;241m=\u001b[39mllm_config,\n\u001b[1;32m      4\u001b[0m     system_message\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAs an SEO expert, your role is to analyze and enhance content for optimal search engine performance. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFocus on providing actionable recommendations that boost rankings and drive organic traffic. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLimit your feedback to 3 key points, ensuring they are specific and directly applicable. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStart each review by introducing yourself as an SEO Reviewer.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'autogen' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "SEO_reviewer = AssistantAgent(\n",
+    "    name=\"SEO Reviewer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"As an SEO expert, your role is to analyze and enhance content for optimal search engine performance. \"\n",
+    "        \"Focus on providing actionable recommendations that boost rankings and drive organic traffic. \"\n",
+    "        \"Limit your feedback to 3 key points, ensuring they are specific and directly applicable. \"\n",
+    "        \"Start each review by introducing yourself as an SEO Reviewer.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abec0a5a-cf54-4ac8-9523-8dca14ed62fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grammatical_error_reviewer = AssistantAgent(\n",
+    "    name=\"Grammatical Error Reviewer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"As a grammar specialist, your task is to meticulously examine content \"\n",
+    "        \"for grammatical errors, punctuation mistakes, and style inconsistencies. \"\n",
+    "        \"Provide up to 3 key points addressing the most significant grammatical issues. \"\n",
+    "        \"Ensure your feedback is specific, actionable, and includes examples where appropriate. \"\n",
+    "        \"Begin each review by introducing yourself as a Grammatical Error Reviewer.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c2fcf0-ed53-4158-ab15-a2e3af6942bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ethics_reviewer = AssistantAgent(\n",
+    "    name=\"Ethics Reviewer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"As an ethics specialist, your role is to evaluate content for ethical integrity \"\n",
+    "        \"and identify any potential moral concerns. \"\n",
+    "        \"Provide up to 3 specific, actionable recommendations to address ethical issues. \"\n",
+    "        \"Ensure your feedback is concise and directly applicable. \"\n",
+    "        \"Start each review by introducing yourself as an Ethics Reviewer.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9022617a-3484-4e69-a591-ead6fd94b18c",
    "metadata": {},
    "outputs": [],
    "source": []
