--- a/03_03_e.ipynb
+++ b/03_03_e.ipynb
@@ -248,7 +248,14 @@
    "id": "9022617a-3484-4e69-a591-ead6fd94b18c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "meta_reviewer = autogen.AssistantAgent(\n",
+    "    name=\"Meta Reviewer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"You are a meta reviewer, you aggragate and review \"\n",
+    "    \"the work of other reviewers and give a final suggestion on the content.\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
