--- a/03_04_e.ipynb
+++ b/03_04_e.ipynb
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c725352-5173-4b22-aeed-08ae26b733fd",
+   "id": "808f142a-7547-4486-a033-c754a5afc2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,84 @@
    "id": "3b1b310f-19f3-4e3e-b558-d3bfec10d946",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reflection_message(recipient, messages, sender, config):\n",
+    "    return f'''Review the following content. \n",
+    "            \\n\\n {recipient.chat_messages_for_summary(sender)[-1]['content']}'''\n",
+    "\n",
+    "review_chats = [\n",
+    "    {\n",
+    "     \"recipient\": SEO_reviewer, \n",
+    "     \"message\": reflection_message, \n",
+    "     \"summary_method\": \"reflection_with_llm\",\n",
+    "     \"summary_args\": {\"summary_prompt\" : \n",
+    "        \"Return review into as JSON object only:\"\n",
+    "        \"{'Reviewer': '', 'Review': ''}. Here Reviewer should be your role\",},\n",
+    "     \"max_turns\": 1},\n",
+    "    {\n",
+    "    \"recipient\": grammatical_error_reviewer, \"message\": reflection_message, \n",
+    "     \"summary_method\": \"reflection_with_llm\",\n",
+    "     \"summary_args\": {\"summary_prompt\" : \n",
+    "        \"Return review into as JSON object only:\"\n",
+    "        \"{'Reviewer': '', 'Review': ''}.\",},\n",
+    "     \"max_turns\": 1},\n",
+    "    {\"recipient\": ethics_reviewer, \"message\": reflection_message, \n",
+    "     \"summary_method\": \"reflection_with_llm\",\n",
+    "     \"summary_args\": {\"summary_prompt\" : \n",
+    "        \"Return review into as JSON object only:\"\n",
+    "        \"{'reviewer': '', 'review': ''}\",},\n",
+    "     \"max_turns\": 1},\n",
+    "     {\"recipient\": meta_reviewer, \n",
+    "      \"message\": \"Aggregrate feedback from all reviewers and give final suggestions on the writing.\", \n",
+    "     \"max_turns\": 1},\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab21d6db-3b05-46f3-802b-303b132d6c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "critic.register_nested_chats(\n",
+    "    review_chats,\n",
+    "    trigger=writer,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f15cf62a-86ad-433b-8839-5f0550d1ac33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = critic.initiate_chat(\n",
+    "    recipient=writer,\n",
+    "    message=task,\n",
+    "    max_turns=2,\n",
+    "    summary_method=\"last_msg\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "097a6f78-cce7-4cb4-89dd-0d32f4ca03a7",
+   "metadata": {},
+   "source": [
+    "## Get summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf69cef-8dab-47c3-b2ef-8af2ccba0e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(res.summary)"
+   ]
   }
  ],
  "metadata": {
