update begin state

--- a/03_04_b.ipynb
+++ b/03_04_b.ipynb
@@ -243,6 +243,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14707247-1672-401c-9e44-c2325d9e3095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta_reviewer = autogen.AssistantAgent(\n",
+    "    name=\"Meta Reviewer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"You are a meta reviewer, you aggragate and review \"\n",
+    "    \"the work of other reviewers and give a final suggestion on the content.\",\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b09a44cd-823c-47a6-aeb5-30716e42bf96",
    "metadata": {},
