add begin state

--- a/07_01_b.ipynb
+++ b/07_01_b.ipynb
@@ -67,9 +67,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac20c0b0-0bfa-483c-8044-c068a0b5c905",
+   "metadata": {},
+   "source": [
+    "## Create a group chat\n",
+    "\n",
+    "This group chat will include these agents:\n",
+    "\n",
+    "- User_proxy or Admin: to allow the user to comment on the report and ask the writer to refine it.\n",
+    "- Planner: to determine relevant information needed to complete the task.\n",
+    "- Engineer: to write code using the defined plan by the planner.\n",
+    "- Executor: to execute the code written by the engineer.\n",
+    "- Writer: to write the report."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99dc083b-15ad-4ce9-8507-063bbc90e943",
+   "id": "f47b2f93-59c6-459c-8cb9-881b3837e5ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c791c7-b2e5-458d-8679-ebce9e9b40c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8daf02-6772-40a0-8fd8-04a26e849547",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6fd231c-8c85-4491-b2c2-5fb318d2eb27",
    "metadata": {},
    "outputs": [],
    "source": []
