add begin state

--- a/07_01_b.ipynb
+++ b/07_01_b.ipynb
@@ -5,7 +5,7 @@
    "id": "ce5aa41a-0274-4af2-a5c5-efea984b590f",
    "metadata": {},
    "source": [
-    "# Teachable Agents"
+    "# Building a data analysis company with Group Chat"
    ]
   },
   {
