--- a/07_01_e.ipynb
+++ b/07_01_e.ipynb
@@ -88,7 +88,17 @@
    "id": "bdf2410d-a53b-4cb5-883a-bc345bac874e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## user or admin agent\n",
+    "user_proxy = autogen.ConversableAgent(\n",
+    "    name=\"Admin\",\n",
+    "    system_message=\"Give the task, and send \"\n",
+    "    \"instructions to writer to refine the weather analysis report.\",\n",
+    "    code_execution_config=False,\n",
+    "    llm_config=llm_config,\n",
+    "    human_input_mode=\"ALWAYS\",\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -96,7 +106,25 @@
    "id": "49e4bc18-c4b1-4533-a79a-7a6a7bce506e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## planner agent\n",
+    "planner = autogen.ConversableAgent(\n",
+    "    name=\"Planner\",\n",
+    "    system_message=\"Given a task, please determine \"\n",
+    "    \"what weather information is needed to complete the task. \"\n",
+    "    \"Please note that the information will all be retrieved using\"\n",
+    "    \" Python code. Please only suggest information that can be \"\n",
+    "    \"retrieved using Python code. \"\n",
+    "    \"After each step is done by others, check the progress and \"\n",
+    "    \"instruct the remaining steps. If a step fails, try to \"\n",
+    "    \"workaround\",\n",
+    "    description=\"Planner. Given a task, determine what \"\n",
+    "    \"weather information is needed to complete the task. \"\n",
+    "    \"After each step is done by others, check the progress and \"\n",
+    "    \"instruct the remaining steps\",\n",
+    "    llm_config=llm_config,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -104,7 +132,15 @@
    "id": "a562cdcc-d845-48c2-8a1d-22ec229239d0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## engineer agent\n",
+    "engineer = autogen.AssistantAgent(\n",
+    "    name=\"Engineer\",\n",
+    "    llm_config=llm_config,\n",
+    "    description=\"An engineer that writes code to fetch and analyze weather data \"\n",
+    "    \"based on the plan provided by the planner.\",\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -112,7 +148,20 @@
    "id": "a54471b5-3891-494e-a3b3-6d096a647b5c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## executor agent\n",
+    "executor = autogen.ConversableAgent(\n",
+    "    name=\"Executor\",\n",
+    "    system_message=\"Execute the code written by the \"\n",
+    "    \"engineer and report the weather data results.\",\n",
+    "    human_input_mode=\"NEVER\",\n",
+    "    code_execution_config={\n",
+    "        \"last_n_messages\": 3,\n",
+    "        \"work_dir\": \"coding\",\n",
+    "        \"use_docker\": False,\n",
+    "    },\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -120,7 +169,20 @@
    "id": "75257745-74fc-4f58-95b5-466a9e0febdb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## writer agent\n",
+    "writer = autogen.ConversableAgent(\n",
+    "    name=\"Writer\",\n",
+    "    llm_config=llm_config,\n",
+    "    system_message=\"Weather Report Writer. \"\n",
+    "    \"Please write weather analysis reports in markdown format (with relevant titles)\"\n",
+    "    \" and put the content in pseudo ```md``` code block. \"\n",
+    "    \"You take feedback from the admin and refine your report.\",\n",
+    "    description=\"Writer. \"\n",
+    "    \"Write weather analysis reports based on the code execution results and take \"\n",
+    "    \"feedback from the admin to refine the report.\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
