--- a/07_02.ipynb
+++ b/07_02.ipynb
@@ -185,12 +185,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f47b2f93-59c6-459c-8cb9-881b3837e5ac",
+   "cell_type": "markdown",
+   "id": "93c782e2-ca24-43ce-bb56-535d1a4c299f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Define the group chat"
+   ]
   },
   {
    "cell_type": "code",
@@ -198,7 +198,13 @@
    "id": "b5c791c7-b2e5-458d-8679-ebce9e9b40c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "groupchat = autogen.GroupChat(\n",
+    "    agents=[user_proxy, engineer, writer, executor, planner],\n",
+    "    messages=[],\n",
+    "    max_round=10,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -206,12 +212,37 @@
    "id": "ed8daf02-6772-40a0-8fd8-04a26e849547",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "manager = autogen.GroupChatManager(\n",
+    "    groupchat=groupchat, llm_config=llm_config\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec66b25-cd4c-4ce5-9238-ab5ab82bdbf1",
+   "metadata": {},
+   "source": [
+    "## Start the group chat"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fd231c-8c85-4491-b2c2-5fb318d2eb27",
+   "id": "81179498-9c9f-4bb8-8e41-b536e099a459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupchat_result = user_proxy.initiate_chat(\n",
+    "    manager,\n",
+    "    message=task,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bcd04c5-6559-427b-9565-27d721859c47",
    "metadata": {},
    "outputs": [],
    "source": []
