update end state

--- a/04_02_e.ipynb
+++ b/04_02_e.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 1,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "98b763fb-aa90-4778-b9b4-436d263d61b1",
    "metadata": {},
    "outputs": [],
@@ -91,10 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3264892-982d-4434-b6ef-e27333c8feda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[autogen.oai.client: 09-29 02:16:57] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's first define the assistant agent that suggests tool calls.\n",
     "assistant = ConversableAgent(\n",
@@ -102,7 +110,7 @@
     "    system_message=\"You are a helpful AI assistant. \"\n",
     "    \"You can help with simple calculations. \"\n",
     "    \"Return 'TERMINATE' when the task is done.\",\n",
-    "    llm_config={\"config_list\": [{\"model\": \"gpt-4\", \"api_key\": os.environ[\"OPENAI_API_KEY\"]}]},\n",
+    "    llm_config=llm_config,\n",
     ")"
    ]
   },
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29d18df8-ba43-4d50-af12-f06acf78aa0e",
    "metadata": {},
    "outputs": [],
@@ -156,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
